# github-copilot-upgrading

.github/workflows/: python-app.yml
workshop/upgraded/: MANIFEST.in  README.rst  pyproject.toml
workshop/upgraded/.github/workflows/: python-app.yml
workshop/upgraded/guachi/: __init__.py  config.py  database.py
workshop/upgraded/guachi/tests/: test_configmapper.py  test_configurations.py  test_database.py  test_integration.py
